--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Portafolio Diana Solarte</title>
+    <title>Portafolio Diana Solarte.</title>
 </head>
 <body>
 
